syntax = "proto3";
package sec06;

import "google/protobuf/empty.proto";

option java_package = "com.grpc.models.sec06";
option java_outer_classname = "BankServiceUnary";
option java_multiple_files = true;

message BalanceCheckRequest{
  int32 account_number = 1;
}

message AccountBalance{
  int32 account_number = 1;
  int32 balance = 2;
}

message AllAccountResponse{
  repeated AccountBalance account = 1;
}

message WithDrawRequest{
  int32 account_number = 1;
  int32 amount = 2;
}

message Money{
  int32 amount = 1;
}

message DepositRequest{
  oneof request {
    int32 account_number = 1;
    Money money = 2;
  }
}



service BankService{
  //unary send request and receive a response
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);
  rpc GetAllAcount(google.protobuf.Empty) returns (AllAccountResponse);

  //server streaming send a request and receive multiple response
  rpc WithDraw(WithDrawRequest) returns(stream Money);

  //Client streaming
  rpc Deposit(stream DepositRequest) returns (AccountBalance);
}